--- a/Apester/Main.storyboard
+++ b/Apester/Main.storyboard
@@ -108,6 +108,26 @@
                                             <segue destination="fOt-2H-GaU" kind="show" id="xRa-v6-grK"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="jcW-o5-z3t" rowHeight="78" style="IBUITableViewCellStyleDefault" id="c7c-f0-lJA">
+                                        <rect key="frame" x="0.0" y="234" width="375" height="78"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="c7c-f0-lJA" id="zID-Ks-u6J">
+                                            <rect key="frame" x="0.0" y="0.0" width="341" height="77.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Apester Strip (objc)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jcW-o5-z3t">
+                                                    <rect key="frame" x="16" y="0.0" width="324" height="77.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="MQo-q3-7r6" kind="show" id="QPb-qN-q6h"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -209,12 +229,47 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="containerView1" destination="ihB-7R-J5W" id="pyM-Oo-Xcr"/>
+                        <outlet property="containerView" destination="ihB-7R-J5W" id="JhB-eP-SNI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NJ9-nH-Dfx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1937" y="1592"/>
+        </scene>
+        <!--Strip (objc)-->
+        <scene sceneID="ZXa-mi-4CD">
+            <objects>
+                <viewController title="Strip (objc)" id="MQo-q3-7r6" customClass="APEViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="A2D-nh-aV4"/>
+                        <viewControllerLayoutGuide type="bottom" id="ajn-Qh-5Sv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="1S7-qO-L0y">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1uh-Lx-CHo">
+                                <rect key="frame" x="0.0" y="116" width="375" height="128"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="NE8-4o-yKx"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="1uh-Lx-CHo" firstAttribute="leading" secondItem="1S7-qO-L0y" secondAttribute="leading" id="D2a-wi-oJe"/>
+                            <constraint firstAttribute="trailing" secondItem="1uh-Lx-CHo" secondAttribute="trailing" id="L9B-kv-mZp"/>
+                            <constraint firstItem="1uh-Lx-CHo" firstAttribute="top" secondItem="A2D-nh-aV4" secondAttribute="bottom" id="l5B-PU-amD"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="containerView" destination="1uh-Lx-CHo" id="Ysk-uQ-Cmt"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DqF-g3-hGY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1188" y="1592"/>
         </scene>
     </scenes>
 </document>
